--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: 'Noto Serif';
-  src: url('../fonts/NotoSerif-Regular.woff2') format('woff2');
+  src: url('../fonts/NotoSerif.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
