--- a/css/styles.css
+++ b/css/styles.css
@@ -55,8 +55,10 @@ h1 {
   font-weight: 700;
   color: #101010;
   font-size: 1.75em;
-  text-shadow: 1px 4px 6px rgb(249, 247, 241), 0 0 0 #000,
-    1px 4px 6px rgb(249, 247, 241);
+text-shadow: 0.005em 0em 0 #4e4e4e, 0.005em 0.01em 0 #4e4e4e,
+    0.005em 0.023em 0 #5a5a5a, 0.005em 0.033em 0 #5a5a5a,
+    0.005em 0.05em 0 #5a5a5a, 0.005em 0.06291em 0 #505050,
+    0.08em 0.063em 0.08em rgba(0, 0, 0, 0.7);
 }
 
 .container {
