--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,14 @@
   font-display: swap;
 }
 
+@font-face {
+	font-family: 'Bricolage Grotesque';
+	src: url('../fonts/BricolageGrotesque-ExtraBold.woff2') format('woff2');
+	font-weight: 800;
+	font-style: normal;
+  font-display: swap;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -51,14 +59,13 @@ body {
 }
 
 h1 {
+  font-family: 'Bricolage Grotesque', serif;
+  font-weight: 800;
+	line-height: 1em;
+	text-shadow: 0px 1px 0px rgba(0,0,0,0.63);
   position: relative;
-  font-weight: 700;
   color: #101010;
   font-size: 1.75em;
-text-shadow: 0.005em 0em 0 #4e4e4e, 0.005em 0.01em 0 #4e4e4e,
-    0.005em 0.023em 0 #5a5a5a, 0.005em 0.033em 0 #5a5a5a,
-    0.005em 0.05em 0 #5a5a5a, 0.005em 0.06291em 0 #505050,
-    0.08em 0.063em 0.08em rgba(0, 0, 0, 0.7);
 }
 
 .container {
